# lbm-miniapp

./: .clang-format  .cmake_targets.txt  .gitignore  CMakeLists.txt  README.md  cmake-build.sh
include/: FluidProperties.hpp  LbmBase.hpp  LbmD3Q19.hpp  LbmTube.hpp  information.h
lbmini/: Data.hpp  Executor.cpp  Executor.hpp  Utils.hpp  config.yaml  main.cpp  openmp.cpp  plain.cpp  plot.py  system.yaml
lbmini/Analysis/: analytical.py  error.py  plot.py  run.py  scalability.py
lbmini/Data/: ControlData.hpp  DataEnums.hpp  DataReader.hpp  FluidData.hpp  MeshData.hpp  PerformanceData.hpp
lbmini/Lbm/: CountCores.hpp  DeviceBuffer.hpp  ILattice.hpp  ILbmTube.hpp  LbmBase.hpp
lbmini/Lbm/Cuda/: LatticeD2Q9.hpp  LbmTube.cu  LbmTube.hpp  convert.py
lbmini/Lbm/Cuda/Gpu/: LatticeD2Q9.hpp  LbmTube.cu  LbmTube.hpp
lbmini/Lbm/Mpi/Cpu/: LatticeD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenAcc/Cpu/: LatticeD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenAcc/Gpu/: LatticeD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenCl/Cpu/: LatticeD2Q9.hpp  LbmTube.hpp  kernels.cl
lbmini/Lbm/OpenCl/Gpu/: LatticeD2Q9.hpp  LbmTube.hpp  kernels.cl
lbmini/Lbm/OpenMp/: LbmD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenMp/Cpu/: LatticeD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenMp/Gpu/: LatticeD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenMpCpu/: LbmD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/OpenMpGpu/: LbmD2Q9.hpp  LbmTube.hpp
lbmini/Lbm/Plain/: LatticeD2Q9.hpp  LbmD2Q9.hpp  LbmTube.hpp
lbmini/lbmini-plain/: LbmBase.hpp  LbmD2Q9.hpp  LbmD3Q19.hpp  LbmTube.hpp  LbmTubeGuo.hpp  LbmTubeTran.hpp
src/: information.cpp  main.cpp  plot.py
thesis/: 00-dados.tex  00-pacotes.tex  00-pretextual.tex  000-main.tex  01-introducao.tex  02-revisao-bibliografica.tex  03-metodologia.tex  04-implementacao-computacional.tex  04-metodo-de-lattice-boltzmann.tex  05-resultados.tex  06-consideracoes-finais.tex  07-consideracoes-finais.tex  UFPR.sty  latexmkrc  referencias.bib
